# poem-openapi-foreign

./: Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: main.rs
foreign/: Cargo.toml
foreign/src/: lib.rs
jsonwrap/: Cargo.toml
jsonwrap/src/: lib.rs
