[workspace]
resolver = "3"
members = [
    "foreign",
    "api",
    "jsonwrap"
]


[workspace.dependencies]
foreign.path = "foreign/"
jsonwrap.path = "jsonwrap/"

poem = "3.1.12"
poem-openapi = {version = "5.1.16", features = ["swagger-ui"]}
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
schemars = "1.1.0"
serde-reflection = "0.5.1"
